# simpleRobot

./: CMakeLists.txt  README.md  simpleRobot.pc.in
include/: simpleRobot.h
samples/: howto_simpleRobot.cpp
src/: simpleRobot.cpp
